# tensor-net

./: .gitignore  Cargo.toml  README.md
lib/: lib.rs  network.rs  tensor.rs
prototyping/: addl-measurements.py  bond-dimension.py  entropy.py  haar-unitary.py  schmidt_mps.py  shannon_check.py
tensor-net/: Cargo.toml
tensor-net/lib/: circuit.rs  circuit_na.rs  gamma.rs  gate.rs  gate_na.rs  id_set.rs  lazymps.rs  lib.rs  mps.rs  mps2.rs  mps_na.rs  network.rs  network2.rs  network3.rs  pmps.rs  pool.rs  pool_na.rs  tensor.rs  tensor2.rs  tensor3.rs  tnetstate.rs
workspace/: Cargo.toml  run.nu  state
workspace/lib/: clifford.rs  haar.rs  lib.rs
workspace/src/: circuit_file_test.rs  clifford.rs  clifford_mixing.rs  clifford_mixing_nd.rs  clifford_testing.rs  clifford_testing_nd.rs  correlation_testing.rs  correlation_testing_nd.rs  density_mat_testing_nd.rs  entropy.rs  entropy_nd.rs  fixed_circuit.rs  fixed_circuit_conserv.rs  fixed_circuit_nd.rs  fixed_conserv_exact.rs  haar_coev_entropy.rs  haar_coev_probs.rs  haar_coev_probs_batching.rs  haar_coev_probs_by_circ.rs  haar_coev_probs_by_circ_p.rs  haar_coev_probs_nd.rs  haar_gen_circuits.rs  haar_gen_circuits_p.rs  haar_mixing.rs  haar_state_gen.rs  haar_state_gen_nd.rs  naive_testing.rs  naive_testing_nd.rs  phase_transition.rs  phase_transition_nd.rs  rotation_testing_nd.rs  sampling_testing.rs  state_nd.rs  testing.rs
workspace/src/clifford_mixing/: 0-plot.py
workspace/src/entropy/: 0-plot.py
workspace/src/entropy/0/: runtime-compression.py
workspace/src/fixed_circuit/: 0-cross-corr.py
workspace/src/fixed_circuit/0/: measurement-positions.py
workspace/src/fixed_circuit/deprecated/: 0-cross-corr.py
workspace/src/fixed_circuit_conserv/0/: 0-dot.py  1-klqc.py  2-klqc_2pt.py  _2-klqc_2pt.py
workspace/src/fixed_conserv_exact/: 0-klqc-2pt.py
workspace/src/haar_coev_entropy/0/: plot.py
workspace/src/haar_coev_probs/0/: avg_div.py  cumulative.py  cumulative_avg.py
workspace/src/haar_mixing/: 0-plot.py
workspace/src/haar_state_gen/0/: analyze.py  avg_dens.py
workspace/src/naive/: 0-klqc-2pt.py
workspace/src/phase_transition/: 0-plot.py  1-collapse.py
workspace/src/phase_transition/deprecated/: 1-collapse.py
