[package]
name = "tensor-net"
version = "0.1.0"
authors = [ "whooie <wcwhuie@gmail.com>",]
edition = "2021"

[dependencies]
# anyhow = "*"
# indexmap = "*"
# ndarray-npy = "*"
crossbeam = "0.8.4"
itertools = "0.12.1"
ndarray = "0.15.6"
num-complex = "0.4.5"
num_cpus = "1.16.0"
rustc-hash = "1.1.0"
thiserror = "1.0.58"

[lib]
path = "lib/lib.rs"
name = "tensor_net"

# [dependencies.ndarray-linalg]
# version = "*"
# features = [ "openblas-system",]

[profile.release]
lto = true
panic = "abort"
