[package]
name = "tensor-net"
version = "0.1.0"
authors = [ "whooie <wcwhuie@gmail.com>",]
edition = "2021"

[dependencies]
# anyhow = "*"
# indexmap = "*"
# ndarray-npy = "*"
crossbeam = "0.8.4"
itertools = "0.12.1"
ndarray = "0.15.6"
ndarray-linalg = { version = "0.16.0", features = ["openblas-system"] }
num-complex = "0.4.5"
num-traits = "0.2.19"
num_cpus = "1.16.0"
once_cell = "1.19.0"
rand = "0.8.5"
rustc-hash = "1.1.0"
statrs = "0.17.1"
thiserror = "1.0.58"

[dev-dependencies.whooie]
git = "https://gitlab.com/whooie/rust-lib.git"
version = "*"
features = [ "ndarray-utils",]

[lib]
path = "lib/lib.rs"
name = "tensor_net"

[profile.release]
lto = true
panic = "abort"
