[package]
name = "workspace"
version = "0.1.0"
authors = [ "whooie <wcwhuie@gmail.com>",]
edition = "2021"

[dependencies]
# anyhow = "*"
# thiserror = "*"
itertools = "0.13.0"
ndarray = { version = "0.15.6", features = [ "default", "rayon",] }
num-complex = "0.4.6"
rand = "0.8.5"
rayon = "1.10.0"
tensor-net = { path = "../tensor-net", version = "*" }

[dependencies.whooie]
git = "https://gitlab.com/whooie/rust-lib.git"
version = "*"
features = [ "ndarray-utils",]

[lib]
path = "lib/lib.rs"
name = "lib"

[[bin]]
path = "src/entropy.rs"
name = "entropy"

[[bin]]
path = "src/phase_transition.rs"
name = "phase_transition"

[[bin]]
path = "src/state.rs"
name = "state"

[[bin]]
path = "src/fixed_circuit.rs"
name = "fixed_circuit"

[[bin]]
path = "src/fixed_circuit_conserv.rs"
name = "fixed_circuit_conserv"

[[bin]]
path = "src/testing.rs"
name = "testing"

[profile.release]
lto = true
panic = "abort"
debug = true
